fix: update active colors for contrast themes

--- a/src/assets/styles/components/_nav--secondary.scss
+++ b/src/assets/styles/components/_nav--secondary.scss
@@ -31,8 +31,9 @@
   }
 
   &:active {
-    background: var(--fl-bgColor, var(--indigo-500));
-    box-shadow: calc(-1 * var(--gutter)) rem(-1) 0 rem(1) var(--fl-bgColor, var(--indigo-500)), var(--gutter) rem(-1) 0 rem(1) var(--fl-bgColor, var(--indigo-500));
+    background: var(--fl-linkColor, var(--indigo-500));
+    box-shadow: calc(-1 * var(--gutter)) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-500)), var(--gutter) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-500));
+    color: var(--fl-bgColor);
   }
 
   &::after {
@@ -73,7 +74,8 @@
 
     &:active {
       border-bottom-color: transparent;
-      box-shadow: calc(-1 * var(--gutter)) rem(-1) 0 rem(1) var(--fl-fgColor, var(--indigo-500)), var(--gutter) rem(-1) 0 rem(1) var(--fl-fgColor, var(--indigo-500));
+      box-shadow: calc(-1 * var(--gutter)) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-500)), var(--gutter) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-500));
+      color: var(--fl-bgColor);
     }
   }
 }
